# UpdateUserInfo

./: Dockerfile  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt  updateuser.py  updateuserinfo.py
.github/workflows/: docker-build.yml  release.yml
root/app/: updateuser.py
root/etc/s6-overlay/s6-rc.d/init-config-jamfupdateuser/: up
root/etc/s6-overlay/s6-rc.d/svc-jamfupdateuser/: run
